@@ -1,3 +1,9 @@
+2001-12-15  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 02663] fix prevA() cause loop
+	* table.c (do_refill): force flushline
+	* table.c (feed_table_tag): push line if <a> has no href attr
+
 2001-12-15  Rin Okuyama <okuyama@cna.ne.jp>
 
 	* [w3m-dev 02659] rc.c (show_srch_str)
@@ -1244,4 +1250,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.128 2001/12/14 17:35:08 ukai Exp $
+$Id: ChangeLog,v 1.129 2001/12/14 17:58:40 ukai Exp $
